Fixes intranet selector z-index

--- a/wp-content/themes/intranet/assets/source/sass/layout/_header.scss
+++ b/wp-content/themes/intranet/assets/source/sass/layout/_header.scss
@@ -4,6 +4,8 @@ body.admin-bar {
 
 #site-header {
     display: block;
+    position: relative;
+    z-index: 1;
 
     .navbar {
         padding: 20px 0;
